Added personal profile info

--- a/sb/index.html
+++ b/sb/index.html
@@ -35,13 +35,38 @@
             </div>
         </nav>
         <!-- Page content-->
-        <div class="container">
-            <div class="text-center mt-5">
-                <h1>A Bootstrap 5 Starter Template</h1>
-                <p class="lead">A complete project boilerplate built with Bootstrap</p>
-                <p>Bootstrap v5.2.3</p>
+
+        <div class="container-fluid mt-3">
+            <h1>Personal Profile Web Page</h1>
+            
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-md bg-primary text-white">1 of 2<br>About Me
+                    <br>My Name is Michael M. Orenze, Im 21 Years old.</div>
+                <div class="col-md bg-dark text-white">2 of 2<br>Education / Achievements:
+                    <br>JHS Graduate, SHS Graduate. SHS Honor Student.</div>
+              </div>  
             </div>
-        </div>
+            <br>
+            
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-md bg-primary text-white">1 of 5<br>Course:
+                    <br>BSCS-SS, Bachelor of Science in Computer Science with specialization in Software Systems</div>
+                <div class="col-md bg-dark text-white">2 of 5<br>IT Experience:
+                    <br>Made a search engine that everytime you search on it 50 times it will plant a tree (This is our first project in APC)</div>
+                <div class="col-md bg-primary text-white">3 of 5<br>Hobbies & Interests:
+                    <br>I love to play games and watch anime.
+                    <br>I love to spend time with my Girlfriend, Friends, and Family</div>
+                <div class="col-md bg-dark text-white">4 of 5 <br>Goal In Life / Dream:
+                    <br>My goal in life is to become a successful programmer or game developer and have a wealthy, healthy, happy family in the future with my girlfriend.</div>
+                <div class="col-md bg-dark text-white">5 of 5 <br>Picture Gallery:
+                    <br>
+                        <img src="https://github.com/AI-Mikey/webprogSS231-personal-website/blob/main/Image/image_2024-12-01_220257636.png?raw=true" alt="Me and Girlfriend" width="400"></div>
+              </div>  
+            </div>
+          </div>
+
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
